copper-node (0.0.9) UNRELEASED; urgency=medium

  * Switch server to sync.RWMutex, handle requests under RLock
  * Get rid of connection window concept

 -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 19:13:43 +0300

copper-node (0.0.8) unstable; urgency=medium

  * Make pprof available over http in copper-node

 -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 16:53:45 +0300

copper-node (0.0.7) unstable; urgency=medium

  * When logging routes use %v, not %s

 -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 14:25:11 +0300

copper-node (0.0.6) unstable; urgency=medium

  * Log route changes

 -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 14:18:32 +0300

copper-node (0.0.5) unstable; urgency=medium

  * Log service-related messages for easier debugging
  * Remove unused max_retries from the protocol

 -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 13:08:50 +0300

copper-node (0.0.4) unstable; urgency=medium

  * Fix distance of remote services

 -- Alexey Borzenkov <snaury@gmail.com>  Fri, 31 Jul 2015 18:43:52 +0300

copper-node (0.0.3) unstable; urgency=medium

  * Fix routing panic after remotes disconnect

 -- Alexey Borzenkov <snaury@gmail.com>  Fri, 31 Jul 2015 13:43:58 +0300

copper-node (0.0.2) unstable; urgency=medium

  * Case-insensitive host matching and cpu setting in the config

 -- Alexey Borzenkov <snaury@gmail.com>  Fri, 31 Jul 2015 13:27:10 +0300

copper-node (0.0.1) unstable; urgency=medium

  * Initial release.

 -- Alexey Borzenkov <snaury@gmail.com>  Wed, 29 Jul 2015 12:14:26 +0300